--- a/custom_components/home_script/manifest.json
+++ b/custom_components/home_script/manifest.json
@@ -6,5 +6,5 @@
   "version": "0.5.0",
   "loggers": ["home_script"],
   "config_flow": false,
-  "requirements": ["watchdog"]
+  "requirements": ["watchdog", "immutabledict", "contextvars", "runtype"]
 }
